debian is superior, clearly

--- a/hostapd.conf
+++ b/hostapd.conf
@@ -2,7 +2,7 @@ ssid=Longsword
 ignore_broadcast_ssid=0
 macaddr_acl=0
 auth_algs=1
-interface=wlo1
+interface=wlan0
 #bridge=bridge
 channel=6
 ap_max_inactivity=1800
