--- a/dhcpd.conf
+++ b/dhcpd.conf
@@ -6,7 +6,7 @@ max-lease-time 7200;
 # ddns-update-style none;
 # If this DHCP server is the official DHCP server for the local
 # network, the authoritative directive should be uncommented.
-# authoritative;
+authoritative;
 subnet 192.168.25.0 netmask 255.255.255.0 {
   option routers 192.168.25.1;
   range 192.168.25.200 192.168.25.254;
